--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^1.5.0
   introduction_screen: ^4.0.0
-  lottie: ^3.3.2
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
@@ -61,4 +60,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/image/
-
