--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   introduction_screen: ^4.0.0
   flutter_secure_storage: ^9.2.4
+  lottie: ^3.3.2
 
 dev_dependencies:
   flutter_test:
@@ -60,3 +61,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/image/
+    - assets/lottie/
