--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,5 +60,4 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/image/
-    - assets/lottie/
+    - assets/
