--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,4 +60,5 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/
+    - assets/image/
+    - assets/lottie/
