--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   introduction_screen: ^4.0.0
   flutter_secure_storage: ^9.2.4
   lottie: ^3.3.2
+  flutter_easyloading: ^3.0.5
+  typewritertext: ^3.0.9
 
 dev_dependencies:
   flutter_test:
