--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   lottie: ^3.3.2
   flutter_easyloading: ^3.0.5
   typewritertext: ^3.0.9
+  fluttertoast: ^9.0.0
+  permission_handler: ^12.0.1
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
