--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fluttertoast: ^9.0.0
   permission_handler: ^12.0.1
   readmore: ^3.0.0
+  device_info_plus: ^12.2.0
 
 dev_dependencies:
   flutter_test:
